# ipyml

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  anaconda-project-lock.yml  anaconda-project.yml  dodo.py  package.json  setup.cfg  setup.py
.ci/: environment.yml  win.bat
.github/workflows/: ci.yml
_scripts/: nblint.py  preflight.py  project.py  utils.py
examples/: ipyml_Walkthrough.ipynb  test_model.json
notebooks/: ipymlRegressionProcess.ipynb
notebooks/test/: _ImportTest.ipynb
src/ipyml/: IPYML.ipynb  ScatterPlotMatrix.ipynb  __init__.py  _version.py  analysis_export.py  api.py  base_selection.py  nn_regression.json  ols.json  regression_callable.py  test1.json  testing.json  utils.py
src/ipyml/model_generators/: __init__.py  linear_regression.py  model_generator.py  neural_network.py
src/ipyml/tests/: placeholder.py  test_basic.py  test_placeholder.py
