[metadata]
name = ipyml
description = ipyml is a project to bring sklearn and other machine learning libraries to the jupyter lab interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lnijhawan1/ipyml
author = Lukas Nijhawan
author_email = Lukas.Nijhawan@gtri.gatech.edu
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
    RDF
    sklearn
    scikit
    regression
    surrogate
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python


[options]
python_requires = >=3.9,<3.10
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    ipywidgets
    ipylab
    numpy
    pandas
    patsy
    scikit-learn
    statsmodels

[options.packages.find]
where =
    src

[options.extras_require]
# a known-good jupyterlab 3 combination
lab3 =
    jupyterlab ==3.*
    pyviz_comms >=1.0.3


[flake8]
max-line-length = 88
ignore = E203, E501, W503

[isort]
profile = black
multi_line_output = 3
